--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,19 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
+
+.board-top{
+  background-color: blue;
+  margin: 0;
+}
+
+.board-middle{
+  background-color: green;
+  margin: 0;
+}
+
+.board-bottom{
+  background-color: red;
+  margin: 0;
+}
